[package]
name = "bitcoinvm_gadgets"
version = "0.1.0"
authors = [
    "Saravanan Vijayakumaran <sarva@ee.iitb.ac.in>",
]
description = "Gadgets for BitcoinVM"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avras/bitcoinvm"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zcash", "zkp", "zkSNARKs", "bitcoin"]

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
wasm = ["halo2_proofs/wasm"]

[dependencies]
rand = "0.8"
itertools = "0.10.3"
lazy_static = "1.4"
# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2022_09_10" }
halo2_proofs =      { version = "0.2.0", path = "../../privacy-scaling-explorations/halo2/halo2_proofs" }
# ecdsa =           { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2022_09_09" }
ecdsa =             { version = "0.1.0", path = "../../privacy-scaling-explorations/halo2wrong/ecdsa" }
# ecc =             { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2022_09_09" }
ecc =               { version = "0.1.0", path = "../../privacy-scaling-explorations/halo2wrong/ecc" }
# maingate =        { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2022_09_09" }
maingate =          { version = "0.1.0", path = "../../privacy-scaling-explorations/halo2wrong/maingate" }
# integer =         { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2022_09_09" }
integer =           { version = "0.1.0", path = "../../privacy-scaling-explorations/halo2wrong/integer" }
libsecp256k1 = "0.7"
subtle = "2.4"
plotters = { version = "0.3.0", optional = true }

[dev-dependencies]
hex = "0.4.3"
secp256k1 = "0.24.0"
rand_xorshift = "0.3"


